# freihand-dataset

./: .gitignore  pyproject.toml
src/: fashionMNIST.py  fashionMNIST_02.py  fashionMNIST_03.py  fashionMNIST_transfer_learning.py  main.py  test.py  vgg16.py
