[tool.poetry]
name = "freihand-dataset"
version = "0.1.0"
description = ""
authors = ["mur6<you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.1"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
